--- a/README
+++ b/README
@@ -5,4 +5,4 @@ Inspired by the store example by Elf M. Sternberg I decided to try taking this c
 
 ## Current Issues
 
-Bookmarking is now supported on all depths *however* there is currently an issue whereby photos are being assigned new cid values when viewed multiple times, causing bookmarking to break. This is an issue I'll be working to fix. Code also needs to be made more DRY with respect to routing.
+Issue 3 with bookmarking closed. The status of bookmarking is that I've now moved over to Backbone's 'at' allowing direct index references rather than cid lookups. What this means is that subalbums and photos now have fully working bookmarks (which actually weren't correct in the last commit). You can now use index.html#imageid/1/subalbum/1 to access an image inside a subalbum however I might alter this to subalbum/n/imageid/m or something similar. Quite a lot of refactoring to be done within the codebase.
