--- a/README
+++ b/README
@@ -10,3 +10,7 @@ Issue 3 with bookmarking closed. The status of bookmarking is that I've now move
 ## Updates
 
 We now support customized sorting on all levels. In order to set the current view's order for an item, all you need to do is set its 'pid' value. In the album view and subalbum view, this will allow you to define whether you want an album cover to be displayed first, second, third etc. It also means that you can define an array of images in no particular order then order them based on your needs. Note: an order *must* be defined otherwise you'll run into issues with bookmarking (however the basic views should still function)
+
+Back-button support now active for all levels, even with hacks in place.
+
+Safari support seems to have broken in the last few commits. Need to correct.
